2002-12-18  Alfredo Braunstein <abraunst@libero.it>
 
 	* QRef.C (redoRefs): small bug fix (wrong label was selected)
 
2002-12-18  Edwin Leuven  <e.leuven@uva.nl>

	* QCitationDialog.C: update styles combo when necessary
	
2002-12-18  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* Alert_pimpl.C (askForText_pimpl): replace qt_() with _()

2002-12-17  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* QLPopupMenu.C (populate): ignore unknown lfuns; do not insert
	separator as first item of a menu

	* lyx_gui.C (getStatus): indicate that LFUN_LAYOUT_PREAMBLE and
	LFUN_TOOLTIPS_TOGGLE are not implemented

2002-12-18  Edwin Leuven  <e.leuven@uva.nl>

	* BulletsModule.C: fix crash on custom bullet cancel
	
2002-12-18  John Levon  <levon@movementarian.org>

	* qfont_loader.C: symbol should not match "Standard Symbols 1"

2002-12-18  John Levon  <levon@movementarian.org>

	* qfont_loader.C: rewrite for proper maths symbols
	  handling

2002-12-17  John Levon  <levon@movementarian.org>

	* qt_helpers.h:
	* qt_helpers.C: add fromqstr/toqstr/qt_ for converting
	  using locale from/to QString

	* all files: use the above

	* QDocumentDialog.C: fix margins properly

2002-12-17  Alfredo Braunstein <abraunst@libero.it>

	* QCommandBuffer.C: added up.xpm and down.xpm to the command buffer

2002-12-13  Juergen Spitzmueller  <j.spitzmueller@gmx.de>

	* QBibtexDialog.[Ch]
	* ui/QBibtexDialog.ui:
	Add LineEdit for manual *.bib file insertion, ws changes.

2002-12-17  John Levon  <levon@movementarian.org>

	* QLPopupMenu.C: add using endl

2002-12-16  Edwin Leuven  <e.leuven@uva.nl>

	* BulletsModule.C: forgot to remove an include of 
	bulletstrings.[Ch] removed in the previous commit
	
2002-12-16  Edwin Leuven  <e.leuven@uva.nl>

	* BulletsModule.[Ch]: Fix bulletstuff
	* QDocument.C:
	* QDocumentDialog.C:
	* ui/BulletsModuleBase.ui:
	
2002-12-12  John Levon  <levon@movementarian.org>

	* QSpellcheckerDialog.h:
	* QSpellcheckerDialog.C: